--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pytest-cov = "^2.11.1"
 codecov = "^2.1.11"
 flake8 = "^3.8.4"
 python-semantic-release = "^7.15.0"
+Sphinx = "^3.5.2"
+sphinxcontrib-napoleon = "^0.7"
 
 [tool.semantic_release]
 version_variable = "nicenumber/__init__.py:__version__"
