--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,6 @@ name: Deploy
 
 on:
   # Trigger the workflow on push or pull request to master
-  # test
   push:
     branches:
       - main
@@ -47,12 +46,12 @@ jobs:
       with:
         ref: main
         
-    - name: Temporarily disable "include administrators" branch protection
-      uses: benjefferies/branch-protection-bot@master
-      if: always()
-      with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          branch: main
+    # - name: Temporarily disable "include administrators" branch protection
+    #   uses: benjefferies/branch-protection-bot@master
+    #   if: always()
+    #   with:
+    #       access-token: ${{ secrets.ACCESS_TOKEN }}
+    #       branch: main
           
     - name: Bump version and tagging and publish
       run: |
@@ -68,14 +67,12 @@ jobs:
       with:
         github_token: ${{ secrets.ACCESS_TOKEN }}
         
-    - name: Enable "include administrators" branch protection
-      uses: benjefferies/branch-protection-bot@master
-      if: always()  # Force to always run this step to ensure "include administrators" is always turned back on
-      with:
-        access-token: ${{ secrets.ACCESS_TOKEN }}
-        branch: main
-        # owner: UBC-MDS
-        # repo: NiceNumber
+    # - name: Enable "include administrators" branch protection
+    #   uses: benjefferies/branch-protection-bot@master
+    #   if: always()  # Force to always run this step to ensure "include administrators" is always turned back on
+    #   with:
+    #     access-token: ${{ secrets.ACCESS_TOKEN }}
+    #     branch: main
         
     - name: Get release tag version from package version
       run: |
