--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - main
-    tags-ignore:
-      - '*.*'
 
 jobs:
   build:
@@ -91,11 +89,11 @@ jobs:
         draft: false
         prerelease: false
 
-    # - name: Build package and publish to test PyPI
-    #   env:
-    #     TEST_PYPI_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
-    #     TEST_PYPI_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
-    #   run: |
-    #     poetry config repositories.test-pypi https://test.pypi.org/legacy/
-    #     poetry build
-    #     poetry publish -r test-pypi -u $TEST_PYPI_USERNAME -p $TEST_PYPI_PASSWORD
+    - name: Build package and publish to test PyPI
+      env:
+        TEST_PYPI_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
+        TEST_PYPI_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
+      run: |
+        poetry config repositories.test-pypi https://test.pypi.org/legacy/
+        poetry build
+        poetry publish -r test-pypi -u $TEST_PYPI_USERNAME -p $TEST_PYPI_PASSWORD
